<package>
  <name>hase_gazebo</name>
  <version>0.0.0</version>
  <description>
      Hase simulation for Gazebo
  </description>

  <author email="garysevin@gmail.com">Gary Servin</author>
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hase_description</run_depend>
  <run_depend>hase_control</run_depend>
</package>
