<package>
  <name>hase_simulator</name>
  <version>0.0.0</version>
  <description>Packages for simulating Hase.</description>

  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <author email="garyservin@gmail.com">Gary Servin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hase_gazebo</run_depend>

  <export>
    <metapackage />
  </export>
</package>
